markup and css for reafactored way of doing the credit card image

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -22,8 +22,9 @@
             <div class="fieldset__fields">
                 <div class="form-field">
                     <label class="label" for="cc-num">Card Number </label>
-                    <div class="input">
-                        <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input credit-card" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number" autocomplete="off"/>
+                    <div class="input credit-card-container">
+                        <span class="js-credit-card-image credit-card"></span>
+                        <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number" autocomplete="off"/>
                     </div>
                 </div>
 
