added unknow to data attribute to hide when card is unkown, added input styles for small input

--- a/frontend/common/app/assets/stylesheets/base/_forms.scss
+++ b/frontend/common/app/assets/stylesheets/base/_forms.scss
@@ -214,6 +214,14 @@
   }
 }
 
+.text-input--small {
+    width: 30%;
+}
+
+.text-input--block {
+    display: block;
+}
+
 .textarea {
   resize: vertical;
 }
