--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -23,7 +23,7 @@
                 <div class="form-field">
                     <label class="label" for="cc-num">Card Number </label>
                     <div class="input credit-card-container">
-                        <span class="js-credit-card-image credit-card"></span>
+                        <i class="js-credit-card-image credit-card"></i>
                         <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number" autocomplete="off"/>
                     </div>
                 </div>
