--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -31,7 +31,7 @@
                 <div class="form-field">
                     <label class="label" for="cc-cvc">
                         <span>Security code</span>
-                        <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4" data-error-message="Please enter a valid CVC number" autocomplete="off"/>
+                        <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small text-input--block" id="cc-cvc" placeholder="CVC" maxlength="4" data-error-message="Please enter a valid CVC number" autocomplete="off"/>
                     </label>
                 </div>
 
