--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -2,6 +2,7 @@
 @import views.Crumb
 @import views.Dates._
 @import org.joda.time.Instant
+@import model.EBEventStatus._
 
 @main("Membership") {
 
@@ -33,10 +34,10 @@
             <div class="event__tickets">
                 <div class="js-datetime-enhance">
                     <span class="event__sale_ends_note js-datetime-enhance-note">Sales end at </span>
-                    <span class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.sales_end.getOrElse("")">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.sales_end.getOrElse(RichInstant(new Instant()).pretty)</span>
+                    <span class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None, None))).head.sales_end.getOrElse("")">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None, None))).head.sales_end.getOrElse(RichInstant(new Instant()).pretty)</span>
                 </div>
 
-                <span class="event__price js-event-price">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None))).head.cost.getOrElse(model.EBPricing("GBP", "Free", 0)).display</span>
+                <span class="event__price js-event-price">@event.ticket_classes.getOrElse(Seq(model.EBTickets(None, None, None, None, None, None, None, None))).head.cost.getOrElse(model.EBPricing("GBP", "Free", 0)).display</span>
                 <span class="event__price-note"> per ticket.</span>
             </div>
 
@@ -44,7 +45,23 @@
 
             <div class="event__description">@Html(event.description.getOrElse(model.EBRichText("foobar", "foobarhtml")).html)</div>
 
-            <a class="action action--logged-out" href="/event/@event.id/buy">Sign In to attend</a>
+            @event.getStatus match {
+                case Completed => {
+                    <button class="action action--disabled" disabled="disabled">Past Event</button>
+                }
+                case SoldOut => {
+                    <button class="action action--disabled" disabled="disabled">Sold Out</button>
+                }
+                case Cancelled => {
+                    <button class="action action--disabled" disabled="disabled">Cancelled</button>
+                }
+                case PreLive => {
+                    <button class="action action--disabled" disabled="disabled">Coming Soon</button>
+                }
+                case _ => {
+                    <a class="action action--logged-out" href="/event/@event.id/buy">Sign In to attend</a>
+                }
+            }
 
         </div>
     </div>
