--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -14,6 +14,11 @@
     }
 }
 
+.action--disabled {
+    background-color: #CCCCCC;
+    border: none;
+}
+
 .action--wide {
     min-width: 12em;
 }
