specification of the data attributes to the credit card image element

--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -125,6 +125,37 @@
     height: 35px;
     visibility: hidden;
     background: url("/assets/images/card_types_large.png") right top no-repeat;
+    &[data-card-type] {
+        visibility: visible;
+    }
+
+    &[data-card-type="unknown"] {
+        visibility: hidden;
+    }
+
+    &[data-card-type="visa"] {
+        background-position: 0 0;
+    }
+
+    &[data-card-type="mastercard"] {
+        background-position: 0 -35px;
+    }
+
+    &[data-card-type="american-express"] {
+        background-position: 0 -70px;
+    }
+
+    &[data-card-type="discover"] {
+        background-position: 0 -105px;
+    }
+
+    &[data-card-type="diners-club"] {
+        background-position: 0 -140px;
+    }
+
+    &[data-card-type="jcb"] {
+        background-position: 0 -175px;
+    }
 }
 
 .credit-card--inline-block {
@@ -135,68 +166,36 @@
     margin-right: $gutter / 2;
 }
 
-[data-card-type] {
-    visibility: visible;
-}
-
-[data-card-type="unknown"] {
-    visibility: hidden;
-}
-
-[data-card-type="visa"] {
-    background-position: 0 0;
-}
-
-[data-card-type="mastercard"] {
-    background-position: 0 -35px;
-}
-
-[data-card-type="american-express"] {
-    background-position: 0 -70px;
-}
-
-[data-card-type="discover"] {
-    background-position: 0 -105px;
-}
-
-[data-card-type="diners-club"] {
-    background-position: 0 -140px;
-}
-
-[data-card-type="jcb"] {
-    background-position: 0 -175px;
-}
-
 @include mq(tablet){
 
     .credit-card {
         width: 49px;
         height: 32px;
         background: url("/assets/images/card_types_small.png") right top no-repeat;
-    }
 
-    [data-card-type="visa"] {
-        background-position: 0 0;
-    }
+        &[data-card-type="visa"] {
+            background-position: 0 0;
+        }
 
-    [data-card-type="mastercard"] {
-        background-position: 0 -32px;
-    }
+        &[data-card-type="mastercard"] {
+            background-position: 0 -32px;
+        }
 
-    [data-card-type="american-express"] {
-        background-position: 0 -64px;
-    }
+        &[data-card-type="american-express"] {
+            background-position: 0 -64px;
+        }
 
-    [data-card-type="discover"] {
-        background-position: 0 -96px;
-    }
+        &[data-card-type="discover"] {
+            background-position: 0 -96px;
+        }
 
-    [data-card-type="diners-club"] {
-        background-position: 0 -128px;
-    }
+        &[data-card-type="diners-club"] {
+            background-position: 0 -128px;
+        }
 
-    [data-card-type="jcb"] {
-        background-position: 0 -160px;
+        &[data-card-type="jcb"] {
+            background-position: 0 -160px;
+        }
     }
 }
 
