--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -64,7 +64,7 @@
     vertical-align: top;
 }
 
-.ticket-button {
+.action--ticket-button {
     position: relative;
     z-index: 1;
     &:before, &:after {
