refactor of for loop index not needed anymore

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,4 +1,4 @@
-@( eventsList: Seq[model.EBEvent])
+@(eventsList: Seq[model.EBEvent])
 @import views.Crumb
 
 @main("Membership") {
@@ -19,7 +19,7 @@
 
             <ul class="events-list u-unstyled">
 
-                @for((event, index) <- eventsList.zipWithIndex) {
+                @for(event <- eventsList) {
 
                     @partials.event.item(event)
                 }
