--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -6,7 +6,7 @@
         <div class="item__container">
             <a href="/event/@event.id">
                 <div class="item__media-wrapper">
-                    <div class="item__image-container">
+                    <div class="item__image-container event-image-container">
                     @if(event.hasSoldOut){
                         <span class="event-status event-status--sold-out">Sold Out</span>
                     }
