--- a/frontend/common/app/assets/stylesheets/pages/_events.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_events.scss
@@ -252,15 +252,13 @@ div.event {
 
 .event-status {
     position: absolute;
-    right: .1em;
-    top: .1em;
-    width: 50%;
-    padding: $gutter/2;
+    right: 1em;
+    top: 0;
+    padding: 8px 14px;
     text-align: center;
     color: #FFFFFF;
-    border: 1px solid #FFFFFF;
 }
 
 .event-status--sold-out {
-    background-color: $mem-brandBlue;
+    background-color: $mem-brandOrange;
 }
