--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -1,6 +1,6 @@
-@(event: model.EBEvent)
+@(event: model.Eventbrite.EBEvent)
 @import views.Dates._
-@import model.EBEventStatus._
+@import model.Eventbrite.EBEventStatus._
 
 <li class="events-list__item facia-slice__item">
     <div class="item item--has-image">
