--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -22,7 +22,7 @@
                 <time class="item__timestamp js-item__timestamp">
                     <i class="i i-clock-light-grey"></i>
                     <div class="event__location"><span class="icon location--icon"></span>@event.venue.name</div>
-                    <div class="event__time"><span class="icon time--icon"></span>@event.start.pretty</div>
+                    <div class="event__time"><span class="icon time--icon"></span>@Html(event.start.pretty)</div>
                 </time>
             </div>
         </div>
