--- a/frontend/app/views/partials/joiner/paymentAside.scala.html
+++ b/frontend/app/views/partials/joiner/paymentAside.scala.html
@@ -41,7 +41,7 @@
         <li class="form-detail__item">
             <h2 class="form__heading">Payments</h2>
             <p><strong>First payment</strong> will be taken today under the name Guardian Membership.</p>
-            <p><strong>Ongoing payments</strong> Your card will be charged @Html(formatPounds(amount)) every month. Payments will taken on or shortly after the @dayInMonthWithSuffix() of every month. You can change the payment date at any time.</p>
+            <p><strong>Ongoing payments</strong> Your card will be charged @Html(formatPounds(amount)) every month. Payments will taken on or shortly after the @Html(dayInMonthWithSuffix()) of every month. You can change the payment date at any time.</p>
         </li>
         <li class="form-detail__item">
             <h2 class="form__heading">Changed you mind?</h2>
