changed element to time element

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -52,9 +52,8 @@
                 </div>
 
                 <div class="js-datetime-enhance">
-                    <span class="event__sale_ends_note js-datetime-enhance-note">Sales @if(event.getStatus == Completed){ended on}else{end at} </span>
-                    <span class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticketClassesHead.head.sales_end.getOrElse("")">
-                    @Html(event.ticketClassesHead.flatMap(_.sales_end).fold("")(_.pretty))</span>
+                    <span class="event__sale_ends_note js-datetime-enhance-note">Sale @if(event.getStatus == Completed){ended on}else{ends on} </span>
+                    <time class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticketClassesHead.head.sales_end.getOrElse("")">@Html(event.ticketClassesHead.flatMap(_.sales_end).fold("")(_.pretty))</time>
                 </div>
             </div>
 
