--- a/frontend/app/views/partials/joiner/thankyou/paymentSummary.scala.html
+++ b/frontend/app/views/partials/joiner/thankyou/paymentSummary.scala.html
@@ -18,7 +18,7 @@
                 Start Date
             </td>
             <td class="summary-table__cell">
-                @subscription.start.pretty
+                @Html(subscription.start.pretty)
             </td>
         </tr>
         <tr class="summary-table__row" role="row">
@@ -42,7 +42,7 @@
                 Next Payment
             </td>
             <td class="summary-table__cell">
-                @subscription.current_period_end.pretty
+                @Html(subscription.current_period_end.pretty)
             </td>
         </tr>
         <tr class="summary-table__row" role="row">
