--- a/frontend/common/app/assets/stylesheets/base/_helpers.scss
+++ b/frontend/common/app/assets/stylesheets/base/_helpers.scss
@@ -137,6 +137,18 @@
   }
 }
 
+.u-strike {
+    text-decoration: line-through;
+}
+
+.u-parens {
+    &:before {
+        content: "(";
+    }
+    &:after {
+        content: ")";
+    }
+}
 
 /**
  * Prevent line breaks
