Implicit Request object everywhere just for header. Ugly but this is what frontend do

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -1,4 +1,4 @@
-@(event: model.Eventbrite.EBEvent)
+@(event: model.Eventbrite.EBEvent)(implicit request: play.api.mvc.Request[_])
 @import views.Crumb
 @import views.Dates._
 @import org.joda.time.Instant
