--- a/frontend/app/views/joiner/thankyou/patron.scala.html
+++ b/frontend/app/views/joiner/thankyou/patron.scala.html
@@ -1,4 +1,4 @@
-@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)
+@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
 
 @import views.Crumb
 
