--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,4 +1,4 @@
-@(eventsList: Seq[model.Eventbrite.EBEvent])
+@(eventsList: Seq[model.Eventbrite.EBEvent])(implicit request: play.api.mvc.Request[_])
 @import views.Crumb
 
 @main("Membership") {
