event styling for demo

--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -88,3 +88,10 @@
         right: -5px;
     }
 }
+
+.action--ticket-button--grey {
+    margin: 40px 0 5px 0;
+    &:before, &:after {
+        background-color: #E1E1E1;
+    }
+}
