--- a/frontend/common/app/assets/stylesheets/pages/_events.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_events.scss
@@ -73,9 +73,28 @@ li.event {
 div.event {
     .event__content {
 
+        .event__price-amount {
+            @include fs-headline(2);
+        }
+
+        .event__sale-ends {
+            padding-bottom: 20px;
+        }
+
+        .event__content__masthead {
+            background-color: #f5f5f5;
+        }
+
+        .event__content-body {
+            @include rem((
+                max-width: 620px
+            ));
+            margin: 0 auto;
+        }
+
         .event__meta > div {
             display: inline-block;
-            margin: 0 12px 0 0;
+            margin: 0 12px 10px 0;
         }
 
         .event__location,
@@ -84,17 +103,11 @@ div.event {
             display: block;
         }
 
-        .event__price,
         .event__price-note,
         .event__sale_ends_note,
         .event__sale_ends_time{
             @include fs-textsans(4);
             display: inline-block;
-        }
-
-        .event__tickets > * {
-            display: inline-block;
-            margin-right: 12px;
         }
 
         .event__description {
@@ -131,14 +144,23 @@ div.event {
    Temp events hacky stuff (this needs a revisit once design has been confirmed)
    ========================================================================== */
 
+.old-price {
+    display: block;
+}
+
+.event__content__inner {
+    background-color: #F1F1F1;
+}
+
+.event__content__inner--sub {
+    background-color: #E1E1E1;
+    margin-bottom: 20px;
+}
+
 .event__masthead {
     position: relative;
     .event__name {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        padding: 6px 6px 6px 0;
-        background-color: #ffffff;
+        padding: 40px 40px 20px 0;
     }
 }
 
@@ -189,7 +211,7 @@ div.event {
 }
 
 .event__image {
-    background-color: #CCCCCC;
+    background-color: $mem-brandBlue;
     img {
         width: 100%;
     }
