padding added to bottom of page

--- a/frontend/common/app/assets/stylesheets/layout/_layout.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_layout.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .page-container {
-    padding: 0;
+    padding-bottom: 16px;
     background-color: #FFFFFF;
     @include clearfix;
     position: relative;
