changed credit card markers to zeros

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -25,7 +25,7 @@
                     <label class="label" for="cc-num">Card Number </label>
                     <div class="input credit-card-container">
                         <i class="js-credit-card-image credit-card"></i>
-                        <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" autocomplete="off"/>
+                        <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="0000 0000 0000 0000" maxlength="19" autocomplete="off"/>
                     </div>
                 </div>
 
